BaseCoefficientsParser treats blank lines as ignored rather than stop parsing indicator.